# Microwave

./: .gitignore  .microwave.env  README.md  install.ps1  install.sh  pyproject.toml  run.sh  setup.sh
microwave_ai/: __init__.py  cli.py  gateway.py  node.py
microwave_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
microwave_ai/inference/: __init__.py  engine.py  moe.py  pipeline.py  router.py  speculative.py  tensor_transfer.py
microwave_ai/network/: __init__.py  latency.py  region.py  topology.py
microwave_ai/protocol/: __init__.py  messages.py
scripts/: microwave-gateway-quickstart.sh
